--- a/parte2/practica_apartado_red_neuronal.Rmd
+++ b/parte2/practica_apartado_red_neuronal.Rmd
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r}
+```{r, results = "hide", message = FALSE, warning = FALSE}
 # Seleccioamos el directorio actual como directorio de trabajo
 # Si estamos compilando no lo hacemos para que no de error la compilación
 if (interactive()) {
@@ -21,16 +21,21 @@ library(summarytools)
 library(randomForest)
 library(keras)
 library(magrittr)
-library(MLmetrics)
 library(doParallel)
+library(MLmetrics)
+library(reticulate)
 
 # Seleccionamos la semilla aleatoria para todo el cuaderno
 set.seed(12345)
+
+# Configurar el nivel de los warnings en TensorFlow
+py_run_string("import tensorflow as tf")
+py_run_string("tf.get_logger().setLevel('ERROR')")
 ```
 
 ```{r}
 # Leemos el dataset preprocesado
-mydf <- read.csv("sampled_preprocesed.csv", header = TRUE, sep = ",")
+mydf <- read.csv("sampled.csv", header = TRUE, sep = ",")
 
 # Pasamos las variables correspondientes a factor
 mydf$Protocol <- as.factor(mydf$Protocol)
@@ -45,36 +50,69 @@ mydf$Class <- as.factor(mydf$Class)
 
 # Nos aseguramos de que la clase positiva sea "Keylogger" asignando como clase de referencia a "Benign"
 mydf$Class <- relevel(mydf$Class, ref = "Benign")
-
-#Nos quedamos con las columnas numéricas, y a estas columnas les aplicamos un escalado para mejorar las predicciones
-mydf.numeric <- as.data.frame(scale(sapply(mydf, as.numeric)))
-
-# Añadimos la columna a predecir
-mydf.numeric$Class <- mydf$Class
 ```
 
 ```{r}
-# Definimos el conjunto de test
-test_indices <- sample(1:nrow(mydf.numeric), as.integer(0.3 * nrow(mydf.numeric)))
-test <- mydf.numeric[test_indices, ]
+# Escogemos los datos numéricos
+mydf.numeric <- mydf[, sapply(mydf, is.numeric)]
 
-# Definimos el conjunto de train
-train_indices <- setdiff(1:nrow(mydf.numeric), test_indices)
-train <- mydf.numeric[train_indices, ]
+# Escalamos los datos numéricos
+mydf.numeric.scaled <- scale(mydf.numeric)
+
+# Introducimos los datos escalados en el dataset
+mydf[, sapply(mydf, is.numeric)] <- mydf.numeric.scaled
 ```
 
+Vamos a dividir el conjunto de datos en un conjunto de entrenamiento y un conjunto de prueba.
+```{r}
+# Dividimos el dataset en train y test
+train_index <- sample(1:nrow(mydf), nrow(mydf) * 0.8)
+train <- mydf[train_index, ]
+test <- mydf[-train_index, ]
+```
+
+Ahora dividimos el conjunto de train en 5 pliegues para realizar la validación cruzada.
 ```{r}
 # Definimos el número de pliegues
 n <- 5
 
 # Generamos un vector de igual longitud que el numero de filas de train, asociando cada valor a un pliegue
 folds_indexes <- sample(rep(1:n, length.out = nrow(train)))
-
-# Obtenemos los pliegues aplicando la secuencia anterior a los datos de train
-folds <- split(train, folds_indexes)
 ```
 
+# Red Neuronal. {#red-neuronal}
 
+## Explicación del modelo
+Dado que el número de datos que tenemos disponibles para entrenar el modelo elegido puede considerarse relativamente alto, una buena opción a utilizar es la red neuronal, la cual mejora su rendimiento cuando dispone de muchos datos. Además, tanto la alta dimensionalidad como la aparente complejidad en las relaciones entre la variable de salida y las de entrada, pueden ser idóneas para un modelo especializado en captar relaciones no lineales, como es el de la red neuronal. En este modelo, son tres los posibles hiperparámetros entre los que elegir, siendo los dos primeros relativos a la propia arquitectura de la red:
+
+- $units$ en la primera capa. Se elegirá entre los valores $units = 16, 32, 1024$. Con más neuronas en la capa, el modelo amplía en complejidad, lo que puede ayudar con la no linealidad de nuestro problema, pero también puede conducir a un sobreajuste, además de que aumenta el tiempo de entrenamiento.
+
+- $units$ en la segunda capa. Los valores posibles son  $units = 0, 16, 32, 1024$. El primer valor indica que esta capa no es incluida directamente en el modelo, por lo que solo se construiría la red con la primera capa definida anteriormente.
+
+- $epochs$. Es el número de veces que, durante el proceso de entrenamiento, la red ha usado el conjunto total de datos disponibles para entrenar. Cuanto mayor es, más permite al modelo ajustarse a dichos datos y minimizar el error de entrenamiento. Sin embargo, esto conlleva un inconveniente, ya que si el modelo se ajusta demasiado, puede ocurrir overfitting y que no generalice bien a los datos de test. Es por ello que resulta necesario controlar el número de épocas como hiperparámetro. Los valores probados serán $epochs = 50, 100, 150, 200$.
+
+Hay otros aspectos de la arquitectura de la red a tener en cuenta. Las funciones de activación que se tendrán en todas las neuronas será la misma: la función $activation = "relu"$, la cual dota de no linealidad al modelo. También, debido a la alta dimensionalidad de nuestro problema, se ha aplicado regularización a la red añadiendole una capa de regularización 'Dropout' de $rate = 0.2$ tras cada capa oculta. Para la capa de salida, se usarán dos neuronas, una por cada clase distinta, con función de activación $activation = "softmax"$, que produce como salida la probabilidad de que un vector de entrada pertenezca a su correspondiente clase.
+
+En cuanto a la función de pérdida, se usa $loss = "categorical_crossentropy"$, ideal para problemas de clasificación categórica, y el optimizador usado sera $optimizer = optimizer_adam()$, el cual maneja el parámetro de tasa de aprendizaje por sí mismo, por lo que no es necesario tratar este último como un hiperparámetro que variar.
+
+Dado que en el subapartado 'Preparación de los datos de entrenamiento, prueba y los folds' ya se han creado los pliegues con los que se realizará la validación cruzada, usaremos dichos pliegues para buscar los hiperparámetros óptimos de la red neuronal.
+
+## Proceso de validación cruzada
+El proceso de validación cruzada es análogo al del bagging, pero adaptado al algortimo de la red neuronal y sus hiperparámetros.
+
+Primero tenemos que pasar todas las variables a numéricas y escalarlas (excepto la variable "Class").
+```{r}
+# Convertimos todas las variables a numéricas y las escalamos
+mydf.numeric <- as.data.frame(scale(sapply(mydf, as.numeric)))
+mydf.numeric$Class <- mydf$Class
+
+# Seleccionamos el conjunto de test y entrenamiento con los índices creados en el apartado de bagging
+train <- mydf.numeric[train_index, ]
+test <- mydf.numeric[-train_index, ]
+
+# Obtenemos los pliegues aplicando los índices usados
+folds <- split(train, folds_indexes)
+```
 
 ```{r}
 # Creamos un cluster para realizar los cálculos en paralelo
@@ -84,10 +122,10 @@ cl <- makeCluster(detectCores() - 1) # Dejamos un núcleo libre
 registerDoParallel(cl)
 
 # Definimos los valores de nodos, dropout y epocas que vamos a probar
-values.nneurons1 <- c(16, 32, 64)
-values.nneurons2 <- c(0, 16, 32, 64)
-values.dropout.rate <- c(0.1,0.3,0.5)
-values.epochs <- c(50, 100, 200)
+values.nneurons1 <- c(16, 32)
+values.nneurons2 <- c(0, 16, 32)
+values.dropout.rate <- c(0.1, 0.5)
+values.epochs <- c(50, 100)
 
 # Creamos una matriz con todas las combinaciones posibles de los valores de nodos, dropout y epocas
 v <- expand.grid(values.nneurons1, values.nneurons2, values.dropout.rate, values.epochs)
@@ -102,23 +140,21 @@ accuracy.folds <- rep(0, length(folds))
 
 # Entrenamos el modelo de bagging en paralelo
 crossvalidation.results <- foreach(i = 1:nrow(v), .combine = rbind, .packages = c("keras", "MLmetrics")) %dopar% {
-  
-  
   # Configuramos los pesos para las distintas clases según la proporción en la que aparecen
   class_weights <- list(
-      "0" = 1, # Peso para la clase "Benign"
-      "1" = prop.table(table(train$Class))[[1]] / prop.table(table(train$Class))[[2]]  # Peso para la clase "keylogger". Dividimos la proporción de "Benign" entre la de "Keylogger", en el conjunto de entrenamiento
-    )
+    "0" = 1, # Peso para la clase "Benign"
+    "1" = prop.table(table(train$Class))[[1]] / prop.table(table(train$Class))[[2]] # Peso para la clase "keylogger". Dividimos la proporción de "Benign" entre la de "Keylogger", en el conjunto de entrenamiento
+  )
 
   # Creamos la red neuronal con los parámetros de los vectores
   if (v[i, 2] == 0) {
     modnn <- keras_model_sequential() %>%
-      layer_dense(units = v[i, 1], activation = "relu", input_shape = c(ncol(mydf.numeric)-1)) %>%
+      layer_dense(units = v[i, 1], activation = "relu", input_shape = c(ncol(mydf.numeric) - 1)) %>%
       layer_dropout(rate = v[i, 3]) %>%
       layer_dense(units = 2, activation = "softmax")
   } else {
     modnn <- keras_model_sequential() %>%
-      layer_dense(units = v[i, 1], activation = "relu", input_shape = c(ncol(mydf.numeric)-1)) %>%
+      layer_dense(units = v[i, 1], activation = "relu", input_shape = c(ncol(mydf.numeric) - 1)) %>%
       layer_dropout(rate = v[i, 3]) %>%
       layer_dense(units = v[i, 2], activation = "relu") %>%
       layer_dropout(rate = v[i, 3]) %>%
@@ -133,28 +169,26 @@ crossvalidation.results <- foreach(i = 1:nrow(v), .combine = rbind, .packages = 
   )
 
   for (k in seq(1:length(folds))) {
-    
     # Juntamos todos los folds menos el k
     data <- do.call(rbind, folds[-k])
 
     # Definimos las variables de entrada y de salida del conjunto de entrenamiento
     x.train <- as.matrix(data[, -ncol(data)])
-    y.train <- as.numeric(data$Class == "Keylogger")
+    y.train <- as.matrix(as.numeric(data$Class == "Keylogger"))
 
-    #Pasamos la columna de salida de entrenamiento a dos columnas, donde cada una representa una clase
+    # Pasamos la columna de salida de entrenamiento a dos columnas, donde cada una representa una clase
     y.train <- to_categorical(y.train, 2)
-    
+
     # Entrenamos la red con el conjunto de entrenamiento
-    modnn %>% fit(x.train, y.train, epochs = v[i, 3], verbose = 0, class_weight = class_weights)
+    modnn %>% fit(x.train, y.train, epochs = v[i, 4], verbose = 0, class_weight = class_weights, callbacks = NULL)
 
     # Definimos las variables de entrada y salida para el conjunto de test
     x.test <- as.matrix(folds[[k]][, -ncol(folds[[k]])])
     y.test <- as.numeric(folds[[k]]$Class == "Keylogger")
 
     # Predecimos la probabilidad de que la variable de salida sea "Keylogger"
-    # Predecimos con el pliegue que hemos dejado fuera del entrenamiento
-    y.pred <- predict(modnn, x.test)
-    
+    y.pred <- predict(modnn, x.test, verbose = 0)
+
     # Definimos para la segunda columna de salida que tenga la etiqueta "Keylogger"
     # si su probabilidad es mayor que 0.5
     y.pred.class <- ifelse(y.pred[, 2] > 0.5, 1, 0)
@@ -201,136 +235,89 @@ write.csv(crossvalidation.results, "crossvalidation_neuralnetwork.csv", row.name
 crossvalidation.results
 ```
 
+Una vez hemos realizado la validación cruzda, vamos a representar los resultados y seleccionar los hiperparámetros que han obtenido el mejor F1-Score.
 ```{r}
-mean_accuracy_sd
+# Cargamos los resultados de la validación cruzada
+crossvalidation.results <- read.table("crossvalidation_neuralnetwork.csv", header = TRUE, sep = ",")
 
-max_index <- which.max(mean_accuracy_sd[,1])
-max_accuracy <- max(mean_accuracy_sd[,1])
-range_max_accuracy <- max_accuracy - mean_accuracy_sd[max_index,2]
+# Seleccionamos los resultados para el F1-Score
+f1score.mean <- crossvalidation.results$mean_f1score
+f1score.se <- crossvalidation.results$se_f1score
 
-mean_accuracy_sd_w_max <- mean_accuracy_sd[-max_index,]
+# Representamos los resultados en un plot para verlos mejor
+plot(f1score.mean)
+arrows(1:length(f1score.mean), f1score.mean - f1score.se, 1:length(f1score.mean), f1score.mean + f1score.se, angle = 90, code = 3, length = 0.1)
 
+# Seleccionamos el hiperparámetro que ha obtenido el mejor F1-Score
+f1score.max.arg <- which.max(f1score.mean)
+f1score.max.threshold <- f1score.mean[f1score.max.arg] - f1score.se[f1score.max.arg]
+f1score.values <- f1score.mean + f1score.se
+f1score.valids.args <- which(f1score.values > f1score.max.threshold)
 
-for (i in seq(1:length(mean_accuracy_sd_w_max[,1]))) {
-  
-  if (mean_accuracy_sd_w_max[i,1] + mean_accuracy_sd_w_max[i,2] >= range_max_accuracy) {
-    
-      print(v[i,])
-      print(mean_accuracy_sd_w_max[i,1])
-    
-  }
-  
-}
+# Vemos los parámetros que podemos seleccionar y escogemos a mano el más simple con mejor resultado
+print(crossvalidation.results[f1score.valids.args, ])
 
-#plot(mean_accuracy_sd[, 1] / max(mean_accuracy_sd[, 1]), main = "Accuracy relativo")
-
-# plot(mean_accuracy_sd[,3]/max(mean_accuracy_sd[,3]),main="Accuracy relativo")
-
-
-plot(mean_accuracy_sd_w_max[, 1] + mean_accuracy_sd_w_max[,2], main = "Accuracy absoluto")
-abline(h=range_max_accuracy,col=2)
-
-# plot(mean_accuracy_sd[,3],main="Accuracy absoluto")
+# Vemos el conjunto de hiperparámetros elegido
+v.op <- v[13, ]
+v.op <- as.vector(unlist(v.op))
+v.op
 ```
 
-Pasamos el tiempo de segundos a horas, minutos y segundos
-```{r}
-horas <- as.integer(train_time %/% 3600)
-resto <- as.integer(train_time %% 3600)
-minutos <- as.integer(resto %/% 60)
-segundos_finales <- as.integer(resto %% 60)
 
-resultado <- sprintf("El entrenamiento ha tardado %d horas, %d minutos y %d segundos", horas, minutos, segundos_finales)
-print(resultado)
+Una vez tenemos los hiperparámetros seleccionados, vamos a entrenar el modelo con el conjunto de entrenamiento. Guardaremos el modelo para no tener que volver a entrenarlo.
+```{r, eval = FALSE}
+k_clear_session()
+
+# Creamos la red neuronal con los parámetros seleccionados
+modnn <- keras_model_sequential() %>%
+  layer_dense(units = v.op[1], activation = "relu", input_shape = c(ncol(mydf.numeric) - 1)) %>%
+  layer_dropout(rate = v.op[3]) %>%
+  layer_dense(units = 2, activation = "softmax")
+
+# Compilamos la red neuronal
+modnn %>% compile(
+  loss = "categorical_crossentropy",
+  optimizer = optimizer_adam(),
+  metrics = c("accuracy")
+)
+
+# Entremanos la red neuronal
+train.numeric <- as.matrix(as.numeric(train$Class))
+train.numeric <- ifelse(train.numeric == 1, 0, 1)
+train.numeric <- to_categorical(train.numeric, 2)
+modnn %>% fit(
+  as.matrix(train[, -ncol(train)]),
+  train.numeric,
+  epochs = v.op[4],
+  verbose = 1,
+  class_weight = class_weights
+)
+
+modnn2 <- modnn
+# Guardamos el modelo de la red neuronal en Python
+save_model_hdf5(modnn, "neural_network_model.keras")
 ```
 
-#################################################
-#Lo siguiente es lo que habia antes
-#################################################
-#################################################
+```{r}
+# Cargamos la red neuronal de Python y lo pasamos a R
+modnn <- load_model_hdf5("neural_network_model.keras")
 
-"""
-```{r,eval=FALSE}
-library(doParallel)
+# Realizamos las predicciones con el conjunto de test
+test.numeric <- as.matrix(as.numeric(test$Class))
+test.numeric <- ifelse(test.numeric == 1, 0, 1)
+test.numeric <- to_categorical(test.numeric, 2)
+y.pred <- predict(modnn, as.matrix(test[, -ncol(test)]), verbose = 0)
 
-# Set up parallel backend to use multiple processors
-cl <- makeCluster(detectCores() - 1) # Leave one core free
-registerDoParallel(cl)
+# Obtenemos las clases
+y.pred.class <- ifelse(y.pred[, 2] > 0.5, 1, 0)
 
-# Definimos los valores de mtry, ntree y nodesize que vamos a probar
-values.units.layer.1 <- 2**c(4, 5, 6)
-values.dropout.rate.1 <- c(0.3, 0.5)
-values.units.layer.2 <- 2**c(4, 5, 6)
-values.dropout.rate.2 <- c(0.3, 0.5)
-values.epochs <- c(50, 100, 150, 200)
+# Calculamos el F1-Score y la precisión
+f1score <- F1_Score(y_pred = y.pred.class, y_true = as.numeric(test$Class == "Keylogger"), positive = 1)
+accuracy <- Accuracy(y_pred = y.pred.class, y_true = as.numeric(test$Class == "Keylogger"))
+print(paste("F1-Score: ", f1score, sep = ""))
+print(paste("Accuracy: ", accuracy, sep = ""))
 
-# Creamos una matriz con todas las combinaciones posibles de los valores de mtry, ntree y nodesize
-v <- expand.grid(values.units.layer.1, values.dropout.rate.1, values.units.layer.2, values.dropout.rate.2, values.epochs)
-
-colnames(v) <- c("Units Layer 1", "Dropout Rate 1", "Units Layer 2", "Dropout Rate 2", "Épocas")
-
-f1.score.fold <- rep(0, length(folds))
-accuracy.fold <- rep(0, length(folds))
-
-inicio <- Sys.time()
-
-# Entrenamos el modelo de bagging en paralelo
-mean_accuracy_sd <- foreach(i = 1:nrow(v), .combine = rbind, .packages = c("keras", "MLmetrics")) %dopar% {
-  test_fold <- rep(0, length(folds))
-  for (k in seq(1:length(folds))) {
-    # Juntamos todos los folds menos el k
-    data <- do.call(rbind, folds[-k])
-
-    # Definimos las variables de entrada y de salida del conjunto de entrenamiento
-    x_train <- as.matrix(sapply(data[, -ncol(data)], as.numeric))
-    y_train <- as.numeric(data$Class == "Keylogger")
-
-    # Creamos la red neuronal
-    modnn <- keras_model_sequential() %>%
-      layer_dense(units = v[i, 1], activation = "relu", input_shape = ncol(x_train)) %>%
-      layer_dropout(rate = v[i, 2]) %>%
-      layer_dense(units = v[i, 3], activation = "relu") %>%
-      layer_dropout(rate = v[i, 4]) %>%
-      layer_dense(units = 1, activation = "sigmoid")
-
-    # La compilamos
-    modnn %>% compile(
-      loss = "binary_crossentropy",
-      optimizer = optimizer_adam(),
-      metrics = c("accuracy")
-    )
-
-    # Entrenamos la red con el conjunto de entrenamiento
-    modnn %>% fit(x_train, y_train, epochs = v[i, 5], verbose = 0)
-
-
-    # Creamos las variables de entrada y salida para el conjunto de test
-    x_test <- as.matrix(sapply(folds[[k]][, -ncol(folds[[k]])], as.numeric))
-    y_test <- as.numeric(folds[[k]]$Class == "Keylogger")
-
-    # Predecimos la probabilidad de que la variable de salida sea "Keylogger"
-    yhat.modnn <- predict(modnn, x_test)
-    y_pred_class <- ifelse(yhat.modnn[, 1] > 0.5, 1, 0)
-
-    # Guardamos la accuracy obtenida comparando las predicciones y los outputs reales del pliegue k
-    # f1.score.fold[k] <- F1_Score(y_pred = y_pred_class, y_true = y_test, positive = "1")
-    accuracy.fold[k] <- Accuracy(y_pred = y_pred_class, y_true = y_test)
-  }
-
-  # Hacemos la media de los accuracy de todos los pliegues
-  # mean_f1.score_fold <- mean(f1.score.fold)
-  mean_accuracy_fold <- mean(accuracy.fold)
-
-
-  # sd_f1.score_fold <- sd(f1.score.fold)/sqrt(length(folds))
-  sd_accuracy_fold <- sd(accuracy.fold) / sqrt(length(folds))
-  c(mean_accuracy_fold, sd_accuracy_fold)
-}
-
-final <- Sys.time()
-
-train_time <- as.numeric(difftime(final, inicio, units = "secs"))
-
-# Stop the cluster
-stopCluster(cl)
+# Realizamos una matriz de confusión
+confusion_matrix <- table(predicted = y.pred.class, real = as.numeric(test$Class == "Keylogger"))
+print(round(addmargins(prop.table(confusion_matrix)), 4) * 100)
 ```
